[package]
name = "librego"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
macroquad = { version = "0.4.14", features = ["audio"] }
parry3d-f64 = "0.20.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
